--- a/coding_judge_backend/.env
+++ b/coding_judge_backend/.env
@@ -1,3 +1,4 @@
 DB_URL=mongodb+srv://user:<12345>@codingjudge.hun05xv.mongodb.net/?retryWrites=true&w=majority&appName=codingjudge
-clientID=957777544743-jspnbil87g0imskku9d3u2jjl6it835i.apps.googleusercontent.com
-clientSecret=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
+GOOGLE_CLIENT_ID = '957777544743-jspnbil87g0imskku9d3u2jjl6it835i.apps.googleusercontent.com';
+GOOGLE_CLIENT_SECRET = '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';
+CALLBACK_URL = 'http://localhost:8000/auth/google/callback'; // This should match the redirect URI you provided when setting up your Google OAuth credentials
