--- a/coding_judge_frontend/package.json
+++ b/coding_judge_frontend/package.json
@@ -11,6 +11,7 @@
     "postcss": "^8.4.36",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
