--- a/coding_judge_frontend/package.json
+++ b/coding_judge_frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,9 +13,14 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.8",
+    "codemirror": "^5.65.16",
+    "draft-js": "^0.11.7",
     "postcss": "^8.4.36",
     "react": "^18.2.0",
+    "react-codemirror2": "^7.3.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-monaco-editor": "^0.55.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
