--- a/coding_judge_frontend/package.json
+++ b/coding_judge_frontend/package.json
@@ -14,12 +14,17 @@
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.8",
     "codemirror": "^5.65.16",
+    "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
+    "html-react-parser": "^5.1.9",
     "postcss": "^8.4.36",
     "react": "^18.2.0",
     "react-codemirror2": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-html-parser": "^2.0.2",
     "react-monaco-editor": "^0.55.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
